# dao-starter

./: .yarnrc.yml  Cargo.toml
contracts/dao-nft/: Cargo.toml
contracts/dao-token/: Cargo.toml
frontend/daofe/: .env.example  package.json  vite.config.ts
frontend/daofe/src/: App.scss  App.tsx  consts.ts  main.tsx
frontend/daofe/src/assets/styles/: index.scss
frontend/daofe/src/components/Modal/: Modal.module.scss  Modal.tsx
frontend/daofe/src/components/attributes/: Attributes.module.scss  Attributes.tsx
frontend/daofe/src/components/footer/: consts.ts  footer.tsx
frontend/daofe/src/components/image/: index.tsx
frontend/daofe/src/components/info-text/: InfoText.module.scss
frontend/daofe/src/hocs/: index.tsx
frontend/daofe/src/hooks/: nft.ts  ticket.ts  useMetadata.ts
frontend/daofe/src/pages/: index.tsx
frontend/daofe/src/pages/addminter/: AddMinter.module.scss  AddMinter.tsx
frontend/daofe/src/pages/cardlist/: ImageList.tsx
frontend/daofe/src/pages/create/: CreateForm.module.scss  CreateForm.tsx
frontend/daofe/src/pages/game/: Game.module.scss  Game.tsx
frontend/daofe/src/pages/home/: Home.module.scss  Home.tsx
frontend/daofe/src/utils/: index.ts
templates/demo-nft/: Cargo.toml  README.md  build.rs
templates/demo-nft/io/: Cargo.toml
templates/demo-nft/src/: lib.rs
templates/demo-nft/state/: Cargo.toml
templates/demo-token/: Cargo.toml  README.md  build.rs
templates/demo-token/io/: Cargo.toml
templates/demo-token/src/: lib.rs
templates/demo-token/state/: Cargo.toml
templates/demo-token/state/src/: lib.rs
(+23 files in other folders)
