[package]
name = "demo-token"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
demo-token-io.workspace = true
gstd.workspace = true
gmeta.workspace = true

[dev-dependencies]
gstd.workspace = true
gtest.workspace = true

[build-dependencies]
demo-token-io.workspace = true
gear-wasm-builder.workspace = true
